opam-version: "2.0"
name: "ezcurl"
version: "0.1"
authors: ["Simon Cruanes"]
maintainer: "simon.cruanes.2007@m4x.org"
license: "MIT"
synopsis: "Friendly wrapper around OCurl"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  #["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocurl"
  "dune" { >= "1.0" }
  "odoc" {with-doc}
  "ocaml" { >= "4.03.0" }
]
tags: [ "curl" "web" "http" "client" ]
homepage: "https://github.com/c-cube/ezcurl/"
doc: "https://c-cube.github.io/ezcurl/doc/1.2"
bug-reports: "https://github.com/c-cube/ezcurl/issues"
dev-repo: "git+https://github.com/c-cube/ezcurl.git"
